<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="180dip"
    android:layout_height="wrap_content"
    android:background="#67b83d"  
    android:padding="1dip">
    <LinearLayout
	    android:layout_width="180dip"
	    android:layout_height="wrap_content"
	    android:background="#f5f5f5"  
	    android:orientation="vertical" >
	    <LinearLayout
	        android:id="@+id/menu_person"
	    	android:layout_width="wrap_content"
	    	android:layout_height="50dip"
	    	android:orientation="horizontal" >
	    	<RelativeLayout 
	    	    android:layout_width="60dip"
	    		android:layout_height="50dip"
	    		android:paddingLeft="10dip"
	    		android:clickable="false"
	    		android:focusable="false">
	    	    <ImageView 
	    	    	android:layout_width="wrap_content"
	    			android:layout_height="wrap_content"
	    			android:clickable="false"
	    			android:focusable="false"
	    			android:layout_centerInParent="true"
	    			android:background="@drawable/menu_person"/>
	    	</RelativeLayout>
	
	    	<LinearLayout
	    		android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:layout_gravity="center_vertical"
	    		android:clickable="false"
	    		android:focusable="false"
	    		android:orientation="vertical">
	    		<TextView 
	    		    android:id="@+id/menu_account"
	    		    android:layout_width="wrap_content"
	    			android:layout_height="wrap_content"
	    			android:clickable="false"
	    			android:focusable="false"
	    			android:textColor="#414141"
	    			android:textSize="12sp"/>
	    		<TextView 
	    		    android:id="@+id/menu_type"
	    		    android:layout_width="wrap_content"
	    			android:layout_height="wrap_content"
	    			android:clickable="false"
	    			android:focusable="false"
	    			android:layout_gravity="center_vertical"
	    			android:textColor="#414141"
	    			android:textSize="12sp"/>
	    	</LinearLayout>
		</LinearLayout>
		<View 
		    android:layout_width="wrap_content"
	    	android:layout_height="1dip"
	    	android:layout_marginLeft="10dip"
	    	android:layout_marginRight="10dip"
	    	android:background="#cdcdcd"/>
		<LinearLayout
		    android:id="@+id/menu_replace"
	    	android:layout_width="wrap_content"
	    	android:layout_height="40dip"
	    	android:orientation="horizontal" >
	    	<RelativeLayout 
	    	    android:layout_width="60dip"
	    		android:layout_height="40dip"
	    		android:paddingLeft="10dip"
	    		android:clickable="false"
	    		android:focusable="false">
	    	    <ImageView 
	    	    	android:layout_width="wrap_content"
	    			android:layout_height="wrap_content"
	    			android:layout_centerInParent="true"
	    			android:clickable="false"
	    			android:focusable="false"
	    			android:background="@drawable/menu_replace"/>
	    	</RelativeLayout>
	    	<TextView 
	    		android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:clickable="false"
	    		android:focusable="false"
	    		android:layout_gravity="center_vertical"
	    		android:textColor="#414141"
	    		android:text="@string/menu_replace"/>
		</LinearLayout>
		<View 
		    android:layout_width="wrap_content"
	    	android:layout_height="1dip"
	    	android:layout_marginLeft="10dip"
	    	android:layout_marginRight="10dip"
	    	android:background="#cdcdcd"/>
		<LinearLayout
		    android:id="@+id/menu_feedback"
	    	android:layout_width="wrap_content"
	    	android:layout_height="40dip"
	    	android:orientation="horizontal" >
	    	<RelativeLayout 
	    	    android:layout_width="60dip"
	    		android:layout_height="40dip"
	    		android:paddingLeft="10dip"
	    		android:clickable="false"
	    		android:focusable="false">
	    	    <ImageView 
	    	    	android:layout_width="wrap_content"
	    			android:layout_height="wrap_content"
	    			android:clickable="false"
	    			android:focusable="false"
	    			android:layout_centerInParent="true"
	    			android:background="@drawable/menu_feedback"/>
	    	</RelativeLayout>
	    	<TextView 
	    		android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:clickable="false"
	    		android:focusable="false"
	    		android:layout_gravity="center_vertical"
	    		android:textColor="#414141"	    		
	    		android:text="@string/menu_feedback"/>
		</LinearLayout>
		<View 
		    android:layout_width="wrap_content"
	    	android:layout_height="1dip"
	    	android:layout_marginLeft="10dip"
	    	android:layout_marginRight="10dip"
	    	android:background="#cdcdcd"/>
		<LinearLayout
		    android:id="@+id/menu_about"
	    	android:layout_width="wrap_content"
	    	android:layout_height="40dip"
	    	android:orientation="horizontal" >
	    	<RelativeLayout 
	    	    android:layout_width="60dip"
	    		android:layout_height="40dip"
	    		android:paddingLeft="10dip"
	    		android:clickable="false"
	    		android:focusable="false">
	    	    <ImageView 
	    	    	android:layout_width="wrap_content"
	    			android:layout_height="wrap_content"
	    			android:clickable="false"
	    			android:focusable="false"
	    			android:layout_centerInParent="true"
	    			android:background="@drawable/menu_about"/>
	    	</RelativeLayout>
	    	<TextView 
	    		android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:clickable="false"
	    		android:focusable="false"
	    		android:layout_gravity="center_vertical"
	    		android:textColor="#414141"
	    		android:text="@string/menu_about"/>
		</LinearLayout>
		<View 
		    android:layout_width="wrap_content"
	    	android:layout_height="1dip"
	    	android:layout_marginLeft="10dip"
	    	android:layout_marginRight="10dip"
	    	android:background="#cdcdcd"/>
		<LinearLayout
		    android:id="@+id/menu_about"
	    	android:layout_width="wrap_content"
	    	android:layout_height="40dip"
	    	android:orientation="horizontal" >
	    	<RelativeLayout 
	    	    android:layout_width="60dip"
	    		android:layout_height="40dip"
	    		android:paddingLeft="10dip"
	    		android:clickable="false"
	    		android:focusable="false">
	    	    <CheckBox
		            android:id="@+id/menu_checkbox"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_centerInParent="true"
		            android:button="@drawable/checkbox_select_image"
		            android:contentDescription="@string/app_name"
		            android:clickable="false"
		            android:focusable="false" />
	    	</RelativeLayout>
	    	<TextView 
	    	    android:id="@+id/menu_forwarding"
	    		android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:clickable="false"
	    		android:focusable="false"
	    		android:layout_gravity="center_vertical"
	    		android:textColor="#414141"
	    		android:text="@string/menu_forwarding"/>
		</LinearLayout>
	</LinearLayout>
</RelativeLayout>
