<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5">
    
	<RelativeLayout 
	    android:id="@+id/rl_top"
        android:layout_width="match_parent"
    	android:layout_height="51dip"
    	android:background="#ffffff">
	    <RelativeLayout 
	        android:id="@+id/rl_back"
	        android:layout_width="50dip"
	    	android:layout_height="50dip">
		    <ImageButton
		    	android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:clickable="false"
		        android:focusable="false"
		        android:layout_centerInParent="true"
		        android:background="@drawable/common_back"/>
	    </RelativeLayout>
	    <TextView
	        android:id="@+id/im_client"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@id/rl_back"
	        android:clickable="false"
	        android:layout_centerInParent="true"
	        android:text=""
	        android:textSize="24sp"
	        android:textColor="#414141"
	        android:gravity="center_vertical"/>
	    <View 
        	android:layout_width="match_parent"
        	android:layout_height="1dip"
        	android:layout_alignParentBottom="true"
        	android:background="#67b83d"/>
    </RelativeLayout>
    <LinearLayout 
        android:id="@+id/ll_bottom"
   		android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_alignParentBottom="true"
   	 	android:orientation="vertical" >
	    
        <View 
            android:layout_width="match_parent"
    		android:layout_height="1dip"
    		android:background="#ececec"/>
        <LinearLayout 
   			android:layout_width="match_parent"
    		android:layout_height="50dip"
    		android:background="#ffffff"
   	 		android:orientation="horizontal" >
		    <RelativeLayout
		        android:id="@+id/im_more"
   				android:layout_width="match_parent"
    			android:layout_height="match_parent"
    			android:layout_weight="3" >
   	 			<ImageButton
			    	android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:clickable="false"
		        	android:focusable="false"
			        android:layout_centerInParent="true"
			        android:background="@drawable/im_more"/>
   	 		</RelativeLayout>
		    <EditText 
		        android:id="@+id/im_send_text"
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:layout_marginTop="8dip"
		        android:layout_marginBottom="8dip"
		        android:layout_weight="1"
		        android:layout_gravity="center"
		        android:hint="输入内容"
		        android:textColor="#414141"
		        android:background="@drawable/login_input"/>
		    <RelativeLayout
		        android:id="@+id/im_audio"
   				android:layout_width="match_parent"
    			android:layout_height="match_parent"
    			android:layout_weight="3">
   	 			<ImageButton
			    	android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:clickable="false"
		        	android:focusable="false"
			        android:layout_centerInParent="true"
			        android:background="@drawable/im_audio"/>
   	 		</RelativeLayout>
   	 		<RelativeLayout
		        android:id="@+id/im_key"
   				android:layout_width="match_parent"
    			android:layout_height="match_parent"
    			android:layout_weight="3"
    			android:visibility="gone">
   	 			<ImageButton
			    	android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:clickable="false"
		        	android:focusable="false"
			        android:layout_centerInParent="true"
			        android:background="@drawable/im_key"/>
   	 		</RelativeLayout>
		    <TextView
		        android:id="@+id/im_send_btn"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_weight="3"
				android:clickable="false"
				android:layout_gravity="center"
				android:gravity="center"
				android:textColor="#67b83d"
				android:text="@string/im_send"
				android:textSize="16sp"
				android:visibility="gone"/>
		</LinearLayout>
		
		<LinearLayout
		    android:id="@+id/im_ll_more"
   			android:layout_width="match_parent"
    		android:layout_height="match_parent"
    		android:layout_gravity="center_horizontal"
   	 		android:orientation="horizontal" 
   	 		android:visibility="gone">
		    <LinearLayout 
		        android:id="@+id/im_ll_file"
		        android:layout_width="match_parent"
    			android:layout_height="match_parent"
    			android:layout_weight="1"
    			android:layout_gravity="center"
    			android:gravity="center"
    			android:orientation="vertical">
		        <ImageButton
		    		android:layout_width="wrap_content"
		        	android:layout_height="wrap_content"
		        	android:clickable="false"
		        	android:focusable="false"
		        	android:background="@drawable/im_file"/>
		        <TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:clickable="false"
		        	android:focusable="false"
					android:gravity="center"
					android:textColor="#999999"
					android:text="@string/im_file"
					android:textSize="16sp"/>
		    </LinearLayout>
		    <LinearLayout 
		        android:layout_width="match_parent"
    			android:layout_height="120dip"
    			android:layout_weight="1"
    			android:layout_gravity="center"
    			android:gravity="center"
    			android:orientation="vertical"
    			android:visibility="invisible">
		        <ImageButton
		    		android:layout_width="wrap_content"
		        	android:layout_height="wrap_content"
		        	android:clickable="false"
		        	android:focusable="false"
		        	android:background="@drawable/im_image"/>
		        <TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:clickable="false"
					android:focusable="false"
					android:gravity="center"
					android:textColor="#999999"
					android:text="@string/im_image"
					android:textSize="16sp"/>
		    </LinearLayout>
		    <LinearLayout 
		        android:layout_width="match_parent"
    			android:layout_height="match_parent"
    			android:layout_weight="1"
    			android:layout_gravity="center"
    			android:gravity="center"
    			android:orientation="vertical"
    			android:visibility="invisible">
		        <ImageButton
		    		android:layout_width="wrap_content"
		        	android:layout_height="wrap_content"
		        	android:clickable="false"
		        	android:focusable="false"
		        	android:background="@drawable/im_photo"/>
		        <TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:clickable="false"
		        	android:focusable="false"
					android:gravity="center"
					android:textColor="#999999"
					android:text="@string/im_photo"
					android:textSize="16sp"/>
		    </LinearLayout>
		    <LinearLayout 
		        android:layout_width="match_parent"
    			android:layout_height="match_parent"
    			android:layout_weight="1"
    			android:layout_gravity="center"
    			android:gravity="center"
    			android:orientation="vertical"
    			android:visibility="invisible">
		        <ImageButton
		    		android:layout_width="wrap_content"
		        	android:layout_height="wrap_content"
		        	android:clickable="false"
		        	android:focusable="false"
		        	android:background="@drawable/im_position"/>
		        <TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:clickable="false"
		        	android:focusable="false"
					android:gravity="center"
					android:textColor="#999999"
					android:text="@string/im_position"
					android:textSize="16sp"/>
		    </LinearLayout>
		</LinearLayout>
        <LinearLayout
            android:id="@+id/im_ll_record"
   			android:layout_width="match_parent"
    		android:layout_height="match_parent"
    		android:layout_gravity="center_horizontal"
   	 		android:orientation="vertical"
   	 		android:visibility="gone">
		    <TextView
	    	    android:id="@+id/im_tv_record"
				android:layout_width="match_parent"
				android:layout_height="38dip"
				android:clickable="false"
				android:gravity="center"
				android:textColor="#999999"
				android:textSize="16sp"/>
		    <ImageView
		        android:id="@+id/im_iv_record"
		    	android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_horizontal|bottom"
		        android:background="@drawable/im_record1"/>
		</LinearLayout>
    	<TextView
    	    android:id="@+id/im_tv_bottom"
			android:layout_width="match_parent"
			android:layout_height="38dip"
			android:clickable="false"
			android:gravity="center"
			android:textColor="#d9d9d9"
			android:background="#373737"
			android:textSize="18sp"/>
    </LinearLayout>
    <ListView 
	    android:id="@+id/im_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rl_top"
        android:layout_above="@id/ll_bottom"
        android:dividerHeight="0dip"
        android:fadingEdge="none"
        android:footerDividersEnabled="true"
        android:listSelector="#00000000"
        android:scrollbars="vertical"
        android:transcriptMode="normal" > 
   </ListView>

</RelativeLayout>
